# metacritic-scraper-py

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  pyproject.toml
config/: cli_settings.json
src/gamecritic/: __init__.py  cli.py  client.py  config.py  exporter.py  scraper.py  storage.py
src/metacritic_scraper_py/: __init__.py  cli.py  client.py  cover_downloader.py  scraper.py  storage.py
tests/: test_client.py  test_cover.py  test_cover_download.py  test_crawl_auto_sync.py  test_exporter.py  test_full_crawl.py  test_interactive_cli.py  test_slug.py  test_storage_helpers.py  test_sync_slugs.py
