[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gamecritic"
version = "0.1.8"
description = "A practical Python scraper for Metacritic game data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "openpyxl>=3.1.2",
  "prompt_toolkit>=3.0.43",
]

[project.scripts]
gamecritic = "gamecritic.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
